--- a/Disaster_Tweets.ipynb
+++ b/Disaster_Tweets.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "# The Problem\n",
         "\n",
-        "We want to create a deep learning model which is capable of classifying Tweets as related to a disaster (1) or not related to a disaster (0)".
+        "We want to create a deep learning model which is capable of classifying Tweets as related to a disaster (1) or not related to a disaster (0)."
       ],
       "metadata": {
         "id": "2lsLkmBXEjo7"
